[tiles] Ensure all tiles are always visible

--- a/html/tiles.css
+++ b/html/tiles.css
@@ -2,6 +2,10 @@ body {
     background-color: black;
 }
 
+#container {
+    margin:auto;
+}
+
 .tile {
     transition: all 0.4s ease-in-out;
     position: relative;
